# FinanceBenchmark

./: .gitignore  README.md  config.yaml  env.example  example.mcp.json  pyproject.toml  refresh_erp_token.py  run_benchmark.py
.claude/skills/analysis/: SKILL.md
data/: dataset.yaml  rubric.yaml
data/fno_benchmark_data_raw/FO Benchmark_Data/: General_Journal_Import_Guide.html  Master_Data_Import_Guide.html
docs/: Importing_Synthetic_Data_into_Dynamics_365_Finance.md  Setting_Up_a_Basic_MCP_Server_for_Dynamics_365.md  analysis.md  anthropic.md  architecture.md  erp_qa_setup.md  evaluation.md  getting-started.md  importing_synthetic_data_into_dynamics_365_finance.md  inference.md  openai.md  overview.md  setting_up_mcp_for_erp_qa.md  setting_up_mock_mcp_server.md
notebooks/: analysis.ipynb  setup_mock_mcp_server.ipynb
results/: answers_claude-opus-4-7_notorious.json  answers_finance_agent_ambrosial.json  eval_results_answers_claude-haiku-4-5_classic_wolf.json  eval_results_answers_claude-opus-4-7_notorious_robin.json  eval_results_answers_gpt-5.5_keen_rhino.json
scripts/analysis/: compare_providers.py  compare_runs.py  plot_latency.py  plot_scores.py  plot_tool_calls.py  query_runs.py  runs_db.py  variance_analysis.py
scripts/evaluation/: evaluate.py  openai_client.py
scripts/inference/: _claude.py  _openai.py  dataloader.py  inference.py  result_schema.py
scripts/shared/: url_fetcher.py
scripts/tracking/: db.py  register.py  runs.py
tests/: conftest.py  helpers.py  test_eval_incremental_flush.py  test_eval_reuse.py  test_integration_openai_e2e.py  test_pipeline_e2e.py  test_rerun_variance.py  test_url_fetcher.py  test_webfetch_sources.py
tests/fixtures/: dataset_fixture.yaml  mock_tool_outputs.json
tests/integration/: test_pipeline_smoke.py  test_resume.py
tests/unit/: test_config.py  test_dataset_loader.py  test_evaluate_routing.py  test_preprocess.py  test_result_schema.py  test_runs_db.py
(+4 files in other folders)
