[project]
name = "finance-benchmark"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dspy>=2.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tqdm>=4.0",
    "openai>=1.0",
    "azure-identity>=1.15",
    "pandas",
    "aiohttp>=3.8",
    "mcp>=1.2.0",
    "starlette>=0.27",
    "uvicorn[standard]>=0.20",
    "playwright>=1.40",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "coolname>=2.0",
    "scikit-learn",
    "anthropic>=0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: live end-to-end test requiring real API credentials (run explicitly with -m integration)",
]
