[project]
name = "finance-benchmark"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dspy>=2.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tqdm>=4.0",
    "openai>=1.0",
    "azure-identity>=1.15",
    "pandas",
    "numpy>=1.26",
    "scipy>=1.13",
    "openpyxl>=3.1",
    "playwright>=1.40",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "coolname>=2.0",
    "statsmodels>=0.14",
    "requests>=2.28",
    "msal>=1.24",
    "pymupdf>=1.24",
    "ipykernel",
    "xlrd>=2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: live end-to-end test requiring real API credentials (run explicitly with -m integration)",
]
